@@ -214,7 +214,8 @@ secure the contents of the cookie.
 Depending on the Python implementation used, Beaker may require an additional
 library to provide AES encryption.
 
-On CPython (the regular Python), the `pycryptopp`_ library is required.
+On CPython (the regular Python), the `pycryptopp`_ library or `PyCrypto`_ library
+ is required.
 
 On Jython, no additional packages are required, but at least on the Sun JRE,
 the size of the encryption key is by default limited to 128 bits, which causes
@@ -226,3 +227,4 @@ juristiction policy files from Sun:
 * `Policy files for Java 6 <https://cds.sun.com/is-bin/INTERSHOP.enfinity/WFS/CDS-CDS_Developer-Site/en_US/-/USD/ViewProductDetail-Start?ProductRef=jce_policy-6-oth-JPR@CDS-CDS_Developer>`_
 
 .. _pycryptopp: http://pypi.python.org/pypi/pycryptopp
+.. _PyCrypto: http://pypi.python.org/pypi/pycrypto/2.0.1
